fix(outline): prevent outline from being hidden by nearby elements

--- a/core/src/checkbox/checkbox.module.scss
+++ b/core/src/checkbox/checkbox.module.scss
@@ -18,6 +18,7 @@
 
 .tick {
 	position: absolute;
+	z-index: 1; // wins the z-index of outline
 	top: 2px;
 	left: 2px;
 
