--- a/core/src/radio/radio.module.scss
+++ b/core/src/radio/radio.module.scss
@@ -18,6 +18,7 @@
 
 .dot {
 	position: absolute;
+	z-index: 1; // wins the z-index of outline
 	top: 6px;
 	left: 6px;
 
